CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (libslave)

# Build flags
IF (CMAKE_COMPILER_IS_GNUCC)
    # Common options
    ADD_DEFINITIONS (-pipe)
    ADD_DEFINITIONS (-Wall)
    ADD_DEFINITIONS (-O2)
ENDIF (CMAKE_COMPILER_IS_GNUCC)

FIND_PACKAGE (Boost REQUIRED)
INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
FIND_PACKAGE (Boost 1.41.0 COMPONENTS unit_test_framework thread)

INCLUDE (FindPackageHandleStandardArgs)
FIND_PATH (IMYSQL mysql/mysql.h)
FIND_LIBRARY (LMYSQLCLIENT_R mysqlclient_r PATH_SUFFIXES mysql)
SET (Mysql_FIND_REQUIRED YES)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(Mysql DEFAULT_MSG IMYSQL LMYSQLCLIENT_R)
INCLUDE_DIRECTORIES ("${IMYSQL}/mysql")

FILE (GLOB HDR "*.h")
INSTALL (FILES ${HDR} DESTINATION include)
AUX_SOURCE_DIRECTORY (${CMAKE_SOURCE_DIR} SRC)

ADD_LIBRARY (slave_a ${SRC})
SET_TARGET_PROPERTIES (slave_a PROPERTIES OUTPUT_NAME slave)
TARGET_LINK_LIBRARIES (slave_a ${LMYSQLCLIENT_R})
INSTALL (TARGETS slave_a DESTINATION lib64)

ADD_LIBRARY (slave_so SHARED ${SRC})
SET_TARGET_PROPERTIES (slave_so PROPERTIES OUTPUT_NAME slave)
TARGET_LINK_LIBRARIES (slave_so ${LMYSQLCLIENT_R})
INSTALL (TARGETS slave_so DESTINATION lib64)

IF (Boost_FOUND)
    ENABLE_TESTING ()
ENDIF (Boost_FOUND)
ADD_SUBDIRECTORY (test)
